update / backstory vertical scroll background visibility avoided

--- a/public/stylesheets/v4/backstory/backstory-timeline.css
+++ b/public/stylesheets/v4/backstory/backstory-timeline.css
@@ -3,8 +3,7 @@
   position: absolute;
   top: 40px;
   bottom: 0;
-  background: #000;
-  display: inline-block;
+  background-color: #fff;
   width: 100%;
   bottom: 0;
 }
@@ -15,16 +14,6 @@
   width: 100%;
   height: 100%;
   background-color: rgba(255,255,255,1);
-}
-
-.cv-timeline__background:after {
-  content: '';
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 40%;
-  background-color: #fff;
 }
 
 .cv-timeline__background > div {
@@ -41,8 +30,6 @@
   overflow-x: scroll;
   overflow-y: auto;
   height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
 }
 
 .cv-timeline__inner {
@@ -131,9 +118,20 @@
 }
 
 .cv-timeline-year {
-  display: inline-block;
+  position: relative;
+  display: table-cell;
   vertical-align: top;
   padding-top: 10px;
+}
+
+.cv-timeline-year:before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 20%;
+  background-color: #fff;
 }
 
 .cv-timeline-month {
@@ -145,6 +143,7 @@
   position: absolute;
   top: 5px;
   left: 0;
+  min-width: 27px;
   height: 25px;
   padding-top: 3px;
   background: #fff;
